# connectorx-bench

./: .gitignore  Justfile  README.md  env_template  pyproject.toml
benchmarks/: ddos-cx.py  tpch-cx.py  tpch-dask.py  tpch-modin.py  tpch-pandas.py  tpch-redshift.py  tpch-turbodbc.py
dataset/ddos/: ddos-mssql.sql  ddos-mysql.sql  ddos-postgres.sql  ddos-sqlite.sql
dataset/tpch/: tpch-mssql.sql  tpch-mysql.sql  tpch-oracle.sql  tpch-postgres.sql
tpch-spj-workload/spj/: q17.sql  q18.sql  q19.sql  q20.sql  q21.sql  q22.sql  q4.sql  q6.sql
tpch-spj-workload/spj_part/: q1.sql  q10.sql  q11.sql  q12.sql  q13.sql  q14.sql  q15.sql  q16.sql  q17.sql  q18.sql  q19.sql  q2.sql  q20.sql  q21.sql  q22.sql  q3.sql  q4.sql  q5.sql  q6.sql  q7.sql  q8.sql  q9.sql
