[tool.poetry]
name = "connectorx-bench"
version = "0.1.0"
description = ""
authors = ["Xiaoying Wang <wangxiaoying0369@gmail.com>", "Weiyuan Wu <doomsplayer@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
dask = {version = "^2021", optional = true, extras = ["dataframe"]}
modin = {version = ">=0.10", optional = true}
pandas = {version = "^1", optional = true}
polars = {version = ">=0.8", optional = true}
pyarrow = {version = ">=4", optional = true}
python = ">=3.7.1,<3.11"
numpy = ">=1.21.5"
connectorx = ">=0.2.4a6"
# turbodbc = "^4.3.0"
pandas-redshift = "^2.0.5"

[tool.poetry.extras]
all = ["dask", "pandas", "modin", "polars", "pyarrow"]
dask = ["dask", "pandas"]
modin = ["modin", "pandas"]
pandas = ["pandas"]
polars = ["pyarrow", "polars"]
pyarrow = ["pyarrow"]

[tool.poetry.dev-dependencies]
PyHive = "^0.6.4"
PyMySQL = "^1.0.2"
SQLAlchemy = "^1.3.23"
clickhouse-driver = "^0.2.1"
contexttimer = "^0.3.3"
cx-Oracle = "^8.2.1"
dask = {extras = ["dataframe"], version = "^2021.7.0"}
docopt = "^0.6.2"
ipython = "^7.31.1"
maturin = "^0.9.4"
modin = {extras = ["dask"], version = ">=0.10.1"}
mysqlclient = "^2.0.3"
pandahouse = "^0.2.7"
polars = ">=0.8"
presto-python-client = "^0.8.1"
psycopg2-binary = "^2.8.6"
pyarrow = ">=4"
pymssql = "^2.2.2"
pytest = "^6.2"
pytest-benchmark = "^3.4.1"
sqlalchemy-redshift = "^0.8.4"
twine = "^3.4.1"
black = "^21.4b0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry_core>=1.0.0"]
